<resources>
    <string name="app_name">Meme Indexer</string>
    <string name="tab_text_1">Search Memes</string>
    <string name="tab_text_2">Scan Memes</string>
    <string name="tab_text_3">History</string>
    <string name="tab_text_4">Tab Test</string>
    <string name="search_meme">Search Meme</string>
    <string name="test_hello">Hello</string>
    <string name="test_test">Test</string>
    <string name="test_selected_image_displayed">Selected image displayed</string>
    <string name="_0">0</string>
    <string name="files_processed">Files processed</string>
    <string name="meme_file_popup">Meme file popup image</string>
    <string name="search_hint">Text to search</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback_hint"><font size="16">What could be implemented or improved</font></string>
    <string name="return_button">Return</string>
    <string name="memefile_name">Memefile Name</string>
    <string name="memeinfo_path">Path:</string>
    <string name="placeholder">Placeholder</string>
    <string name="memeinfo_ocrtext">Text:</string>
    <string name="scan">Scan</string>
    <string name="scan_success">Total %1$d out of %2$d images found in the directory will be scanned at the scheduled time.</string>
    <string name="path">Path</string>
    <string name="close_info_dialog">Close info dialog</string>
    <string name="edit_ocr_text">Edit OCR text</string>
    <string name="about_us">About Us</string>
    <string name="aboutus_info_body">We searched for a solution to that allowed us to find and share a meme in that tiny window of time. We didn\'t find any that did that specifically so....</string>
    <string name="aboutus_info_us_title">Spacebar Technology</string>
    <string name="aboutus_info_us_body">We materialize remarkable ideas into elegant apps.</string>
    <string name="org_logo">Org logo</string>
    <string name="find_us_at">Find us at:</string>
    <string name="github">Github</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="behance">Behance</string>
    <string name="notification_channel_id">Meme Indexer Service</string>
    <string name="notification_channel_name">Meme Indexer - Index Progress</string>
    <string name="notification_channel_description">Used to show the user current progress of indexing the previously scanned images</string>
    <string name="notification_title">@string/app_name</string>
    <string name="notification_cancel">Stop</string>
    <string name="title_activity_settings">Settings</string>


    <!-- Preference Titles -->
    <string name="theme_header">Personalization</string>
    <string name="scan_header">Scan Settings</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Application Theme</string>
    <string name="theme_key">current_theme</string>

    <string name="save_history_title">Save history</string>
    <string name="save_history_summary_on">Remember what you searched and shared locally</string>
    <string name="save_history_summary_off">No remembering</string>
    <string name="save_history_key">save_history_bool</string>

    <!-- Sync Preferences -->
    <string name="scan_title">Scan periodically</string>
    <string name="scan_summary_on">Automatically scan selected and populated directories in background</string>
    <string name="scan_summary_off">Only scan selected directories when manually requested</string>
    <string name="scan_key">scan_bool</string>
    <string name="scan_time_key">scan_time</string>
    <string name="scan_time_title">Preferred scan time</string>
    <string name="scan_time_summary">HH:MM 24-Hour format</string>


    <string name="settings">Settings</string>
    <string name="disclaimer">MEME INDEXER IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
    <string name="files_populated_scan_now">Press scan now if you want to start scanning the files right away.</string>
    <string name="add_path_to_scan">Add path to scan</string>
    <string name="scan_num_threads_key">scan_num_threads</string>
    <string name="scan_num_threads_title">Scan queue size</string>
    <string name="scan_num_threads_summary">Keep it low if you experience crashes or high RAM usage when scans are running in the background</string>
    <string name="clear_history">Clear History</string>
    <string name="time_range_to_clear">Time range:</string>
    <string name="submit">Submit</string>
    <string name="clear_search_terms">Clear search terms</string>
    <string name="clear_shared_memes">Clear shared memes</string>
    <string name="multiselect_mode">Multiselect Mode</string>

</resources>