<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:icon="@drawable/ic_palette_black_24dp"
        app:title="@string/theme_header">

        <ListPreference
            app:defaultValue="Legacy"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_entries"
            app:key="@string/theme_key"
            app:title="@string/theme_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_image_scan_24px"
        app:title="@string/scan_header">

        <SwitchPreference
            app:defaultValue="true"
            app:key="sync"
            app:summaryOff="@string/scan_summary_off"
            app:summaryOn="@string/scan_summary_on"
            app:title="@string/scan_title" />

        <!--<SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>