<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/feedback_menuitem"
        android:icon="@drawable/ic_email_24px"
        android:title="@string/feedback"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/aboutus_menuitem"
        android:icon="@drawable/ic_info_24dp"
        android:title="@string/about_us"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/settings_menuitem"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/multiselect_menuitem"
        android:icon="@drawable/ic_add_check_black_24dp"
        android:title="@string/multiselect_mode"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/clearhistory_menuitem"
        android:icon="@drawable/ic_delete_sweep_24dp"
        android:title="@string/clear_history"
        app:showAsAction="ifRoom|withText"/>
</menu>