<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorBackgroundLight">

    <LinearLayout
        android:id="@+id/clearhistory_title_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/clearhistory_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="4"
            android:singleLine="true"
            android:text="@string/clear_history"
            android:textAlignment="textStart" />

        <ImageButton
            android:id="@+id/clearhistory_title_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:contentDescription="@string/close_info_dialog"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
            app:tint="?attr/colorAccent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/clearhistory_dropdown_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clearhistory_title_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:singleLine="true"
            android:text="@string/time_range_to_clear"
            android:textAlignment="textStart" />

        <Spinner
            android:id="@+id/clearhistory_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:spinnerMode="dropdown" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>