<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/memeinfo_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardCornerRadius="32dp"
            app:cardElevation="4dp">

            <ImageView
                android:id="@+id/memeinfo_title_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/memeinfo_title_filename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="4"
            android:singleLine="false"
            android:text="@string/memefile_name" />

        <ImageButton
            android:id="@+id/memeinfo_title_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:tint="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/memeinfo_filepath_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeinfo_title_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:singleLine="true"
            android:text="@string/memeinfo_path"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/memeinfo_filepath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:singleLine="false"
            android:text="@string/placeholder"
            android:textColor="@color/colorHyperlink" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memeinfo_filepath_container">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="4"
            android:singleLine="true"
            android:text="@string/memeinfo_ocrtext"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/memeinfo_ocrtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:maxLines="6"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:text="@string/placeholder" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>